# bos

./: '  .bazelignore  .clangd  .gitignore  .gitmodules  :w  CMakeLists.txt  Dockerfile  MODULE.bazel  README.md  bakup.txt  bazel-bin  bazel-bos  bazel-out  bazel-testlogs  deploy.sh  gdb_pretty_printers.py  homework  position_log.wpilog  toolchain.cmake
971apriltag/: 971apriltag.cu  971apriltag.h  CMakeLists.txt  labeling_allegretti_2019_BKE.cu  line_fit_filter.cu  threshold.cu  threshold.h
constants/: navgrid.json  (+25 more)
main/: CMakeLists.txt  game_peice_main.cc  kalman_filter.cc  kalman_filter.h  localization_main.cc  main.cc  pose_estimator.cc  pose_estimator.h  position_sender.cc  position_sender.h  test  test.cc
main/calibration/: .gitignore  CMakeLists.txt  calibrate.cc  extrinsics_calibrate  extrinsics_calibrate.cc  focus_calibrate  focus_calibrate.cc  frame_logger.cc  intrinsics.json  intrinsics_calibrate  intrinsics_calibrate.cc  intrinsics_calibrate_lib.cc  intrinsics_calibrate_lib.h  server.py  test_detector  test_detector.cc  test_intrinsics.cc
main/camera/: CMakeLists.txt  camera.cc  camera.h  cscore_streamer.cc  cscore_streamer.h  disk_camera.cc  disk_camera.h  imx296_camera.cc  imx296_camera.h  realsense_camera.cc  realsense_camera.h  streamer.cc  streamer.h  test  test.cc
main/localization/: CMakeLists.txt  pose_estimator.cc  pose_estimator.h  position.h  position_sender.cc  position_sender.h  simple_kalman.cc  simple_kalman.h  tag_detector.h  tag_estimator.cc  tag_estimator.h
main/pathing/: AStar.cc
main/yolo/: CMakeLists.txt  realsense_yolo_test.cc  yolo.cc  yolo.h
main/yolo/model/: engine_export.py
src/: .gitignore  CMakeLists.txt  fiddler_main.cc  game_peice_main.cc  game_piece_main.cc  localization_main.cc  main_bot_main.cc  main_bot_main.cc~  nt_utils.cpp  nt_utils.h  robot_main.cc  second_bot_main.cc  software_bot_main.cc  stovetop_bot_main.cc  test.cc  turret_bot_main.cc  unambiguous_first.cc  unambiguous_main.cc  unambiguous_second.cc  vision_bot_main.cc
src/calibration/: .gitignore  CMakeLists.txt  camera_tester.cc  extrinsics_calibrate.cc  focus_calibrate.cc  frame_logger.cc  frame_shower.cc  intrinsics_calibrate.cc  intrinsics_calibrate_lib.cc  intrinsics_calibrate_lib.h  select_camera.cc  test_intrinsics.cc
src/camera/: CMakeLists.txt  camera.h  camera_constants.cc  camera_constants.h  camera_source.cc  camera_source.h  cscore_streamer.cc  cscore_streamer.h  cv_camera.cc  cv_camera.h  disk_camera.cc  disk_camera.h  frame_logger.cc  frame_logger.h  imx296_camera.cc  imx296_camera.h  multi_camera_source.cc  multi_camera_source.h  realsense_camera.cc  realsense_camera.h  select_camera.cc  select_camera.h  streamer.cc  streamer.h  terminate_flag.cc  usb_camera.cc  usb_camera.h  uvc_camera.cc  uvc_camera.h  write_frame.cc  write_frame.h
src/camera/training/: README.md  camera.h
src/gamepiece/: CMakeLists.txt  game_piece.cc  gamepiece.cc  gamepiece.h
src/localization/: CMakeLists.txt  README.md  absolute_apriltag_layout.cc  absolute_apriltag_layout.h  apriltag_detector.h  get_field_relitive_position.cc  get_field_relitive_position.h  gpu_apriltag_detector.cc  gpu_apriltag_detector.h  joint_solver.cc  joint_solver.h  levenberg_marquardt.cc  levenberg_marquardt.h  localize_unambiguous.cc  matrices.h  multi_camera_detector.cc  multi_camera_detector.h  multi_tag_solver.cc  multi_tag_solver.h  networktable_sender.cc  networktable_sender.h  nvidia_apriltag_detector.cc  nvidia_apriltag_detector.h  opencv_apriltag_detector.cc  opencv_apriltag_detector.h  pose_estimator.cc  pose_estimator.h  position.h  position_receiver.cc  position_receiver.h  position_sender.cc  position_sender.h  position_solver.cc  position_solver.h  run_localization.cc  run_localization.h  simple_kalman.cc  simple_kalman.h  simulation_sender.cc  simulation_sender.h  (+7 more)
src/pathing/: AStar.cc  CMakeLists.txt  bfs_tester.cc  controller.cc  controller.h  controller_main.cc  pathfinding.cc  pathfinding.h  pathing.cc  pathing.h  simulator.cc  splines.cc  splines.h  velocity_profile.cc  velocity_profile.h  velocity_sender.cc  velocity_sender.h
src/test/: CMakeLists.txt  absl_flag_test.cc  apply_extrinsics_test.cc  apriltag_detect_test.cc  camera_source_test.cc  custom_apriltag_test.cc  distance_measurer.cc  game_piece_test.cc  gamepiece_test.cc  gamepiece_test_no_img.cc  intrinsics_test.cc  joint_solve_test.cc  joint_solver_test.cc  joint_solver_test_uncooked.cc  multi_tag_solver_test.cc  nvidia_apriltag_test.cc  path_plan_test.cc  realsense_yolo_test.cc  solver_test.cc  stress_test.cc  tag_estimator_test.cc  timer_test.cc  yolo_test.cc
src/test/integration_test/: CMakeLists.txt  apriltag_detect_test.cc  auto_check_localization.cc  bfs_tester.cc  custom_apriltag_test.cc  failing_test.cc  gamepiece_test.cc  intrinsics_test.cc  libjpeg_benchmark.cc  localization_test.cc  localization_test2.cc  localization_test3.cc  networktable_performance_test.cc  pva_test.cc  solver_test.cc  stress_test.cc  yolo_test.cc
src/test/unit_test/: CMakeLists.txt  failing_test.cc  forward_test.cc  general_solver_test.cc  joint_solve_test.cc  matrix.cc  multi_tag_test.cc  pathing_test.cc  solver_test.cc  square_solve_test.cc  unit_test_utils.cc  unit_test_utils.h  xad_test.cc
src/utils/: CMakeLists.txt  camera_utils.cc  camera_utils.h  constants_from_json.cc  constants_from_json.h  extrinsics_from_json.cc  extrinsics_from_json.h  intrinsics_from_json.cc  intrinsics_from_json.h  log.cc  log.h  log_path.cc  log_path.h  nt_utils.cc  nt_utils.h  pch.h  stop.h  timer.cc  timer.h  transform.cc  transform.h  wpi_log_sink.cc  wpi_log_sink.h  wpilog_time.cc  wpilog_time.h
src/yolo/: CMakeLists.txt  angle_tester.cc  distance_acquirer.cc  game_piece.cc  game_piece.h  image_collector.cc  ir_tuner.cc  model_constants.h  nms_onnx_maker.py  realsense_yolo_test.cc  realsense_yolo_test.cc~Updated upstream  simple_test.py  test_model.py  test_model_cp.py  train_model.py  yolo.cc  yolo.h  yolo_test.cc
src/yolo/eval/: img_shower.py  official_test.py  simple_test.py  test_model.py
src/yolo/model/: nms_onnx_maker.py
(+609 files in other folders)
